# struck

./: CMakeLists.txt  Features.h  LaRank.cpp  README.md  Sample.h  Sampler.cpp  Tracker.cpp  Tracker.h  main.cpp
docs/: config.txt
include/: ImageRep.h  LaRank.h  Rect.h
src/: Config.cpp  ImageRep.cpp  LaRank.cpp  Tracker.cpp  main.cpp
